ops/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aislemarts-svc
  namespace: staging
  labels:
    app: aislemarts
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: aislemarts
    component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: aislemarts-svc
  namespace: prod
  labels:
    app: aislemarts
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: aislemarts
    component: backend
